@@ -1,4 +1,4 @@
 ## Expunge of inline file
 read <inline-simple.fi
-expunge thefile
+expunge /thefile/
 write
