@@ -7,6 +7,7 @@ Repository head::
      Commands that accept output redirection can also pipe to a command,
      The --branchmap option is gone in favor of using branch rename.
      The behavior and interface of tje tag command has been simplified.
+     The syntax of the expunge command has been simplified
 
 4.23: 2021-01-13::
      Branch rename can take a regexp and do substitutions on the new name(s).
